; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_jsutils.c_jsval_copy.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_jsutils.c_jsval_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i32 0, align 4
@E_FAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @jsval_copy(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = call i32 @jsval_type(i32 %6)
  switch i32 %7, label %36 [
    i32 129, label %8
    i32 133, label %8
    i32 132, label %8
    i32 134, label %8
    i32 131, label %12
    i32 130, label %24
    i32 128, label %31
  ]

8:                                                ; preds = %2, %2, %2, %2
  %9 = load i32, i32* %4, align 4
  %10 = load i32*, i32** %5, align 8
  store i32 %9, i32* %10, align 4
  %11 = load i32, i32* @S_OK, align 4
  store i32 %11, i32* %3, align 4
  br label %39

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @get_object(i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %12
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @get_object(i32 %17)
  %19 = call i32 @IDispatch_AddRef(i32 %18)
  br label %20

20:                                               ; preds = %16, %12
  %21 = load i32, i32* %4, align 4
  %22 = load i32*, i32** %5, align 8
  store i32 %21, i32* %22, align 4
  %23 = load i32, i32* @S_OK, align 4
  store i32 %23, i32* %3, align 4
  br label %39

24:                                               ; preds = %2
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @get_string(i32 %25)
  %27 = call i32 @jsstr_addref(i32 %26)
  %28 = load i32, i32* %4, align 4
  %29 = load i32*, i32** %5, align 8
  store i32 %28, i32* %29, align 4
  %30 = load i32, i32* @S_OK, align 4
  store i32 %30, i32* %3, align 4
  br label %39

31:                                               ; preds = %2
  %32 = load i32*, i32** %5, align 8
  %33 = load i32, i32* %4, align 4
  %34 = call i32 @get_variant(i32 %33)
  %35 = call i32 @jsval_variant(i32* %32, i32 %34)
  store i32 %35, i32* %3, align 4
  br label %39

36:                                               ; preds = %2
  %37 = call i32 @assert(i32 0)
  %38 = load i32, i32* @E_FAIL, align 4
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %36, %31, %24, %20, %8
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @jsval_type(i32) #1

declare dso_local i32 @get_object(i32) #1

declare dso_local i32 @IDispatch_AddRef(i32) #1

declare dso_local i32 @jsstr_addref(i32) #1

declare dso_local i32 @get_string(i32) #1

declare dso_local i32 @jsval_variant(i32*, i32) #1

declare dso_local i32 @get_variant(i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
